--- a/index.html
+++ b/index.html
@@ -363,6 +363,18 @@ body {
                         }
                     });
 
+                 d3.selectAll(".rank")
+                    // .transition()
+                    .style("opacity", 0)
+
+                d3.selectAll(".team")
+                    // .transition()
+                    .style("opacity", 0)
+
+                d3.selectAll("#top10")
+                    // .transition()
+                    .style("opacity", 0)
+
 
 
             })
@@ -565,6 +577,17 @@ body {
                         }
                     });
 
+                 d3.selectAll(".rank")
+                    // .transition()
+                    .style("opacity", 0)
+
+                d3.selectAll(".team")
+                    // .transition()
+                    .style("opacity", 0)
+
+                d3.selectAll("#top10")
+                    // .transition()
+                    .style("opacity", 0)
 
 
             })
