--- a/index.html
+++ b/index.html
@@ -484,16 +484,16 @@ body {
             //         .duration(50)
             //         .attr("height", 255);
 
-            //     d3.selectAll(".cityLabel")
-            //         .transition()
-            //         .duration(100)
-            //         .style("font-size", function(d, i) {
-            //             if (arcdata[i].rank < 11) {
-            //                 return 11;
-            //             } else {
-            //                 return 9;
-            //             };
-            //         })
+                d3.selectAll(".cityLabel")
+                    .transition()
+                    .duration(100)
+                    .style("font-size", function(d, i) {
+                        if (arcdata[i].rank < 11) {
+                            return 11;
+                        } else {
+                            return 9;
+                        };
+                    })
 
             });
 
@@ -698,16 +698,16 @@ body {
             //         .duration(50)
             //         .attr("height", 255);
 
-            //     d3.selectAll(".cityLabel")
-            //         .transition()
-            //         .duration(100)
-            //         .style("font-size", function(d, i) {
-            //             if (arcdata[i].rank < 11) {
-            //                 return 11;
-            //             } else {
-            //                 return 9;
-            //             };
-            //         })
+                d3.selectAll(".cityLabel")
+                    .transition()
+                    .duration(100)
+                    .style("font-size", function(d, i) {
+                        if (arcdata[i].rank < 11) {
+                            return 11;
+                        } else {
+                            return 9;
+                        };
+                    })
 
             });
 
