--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
     /*fill: #e6e6e6;
     opacity: .3;*/
     fill: #7a7a7a;
-    stroke: lightgrey;
+    /*stroke: lightgrey;*/
     stroke-width: 1px;
 }
 
