--- a/index.html
+++ b/index.html
@@ -779,8 +779,8 @@ body {
             .attr("height", 255)
             // .style("fill", "#e6e6e6")
             .style("fill", "#7a7a7a")
-            .style("stroke", "white")
-            .style("stroke-width", 2)
+            // .style("stroke", "white")
+            // .style("stroke-width", 2)
             .style("opacity", .9);
 
         var top10 = arcdata.filter(function(d, i) {
