--- a/season.html
+++ b/season.html
@@ -49,7 +49,7 @@ body {
     </div>
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/topojson.v1.min.js"></script>
-    <script src="cities_teamcolor.js"></script>
+    <script src="cities_season.js"></script>
     <!-- 
     <script src="cities.js"></script>
      -->
